--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,3 +8,24 @@ body,
 html {
   height: 100%;
 }
+
+
+.h6 {
+  font-size: 14px;
+  font-weight: normal;
+  font-style: Arial;  
+  color: black;
+}
+
+.greenblue {
+  background: darkcyan;  
+
+ 
+}
+.purple {
+  background: rebeccapurple;
+}
+
+.red {
+  background: indianred;
+}
