--- a/templates/satGlobe.html
+++ b/templates/satGlobe.html
@@ -23,15 +23,10 @@ integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-<<<<<<< HEAD
- 
+    <strong class="greenblue"> 
    <a class="navbar navbar-brand a"  href="/">Satellite Positions</a>
-
+ </strong>
    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-=======
-    <a class= "navbar-brand" href="/">Satellites</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
->>>>>>> fe55d87ad4166a834a54ad094cf92b549ff75822
      <span class="navbar-toggler-icon"></span>
    </button>
  
@@ -54,15 +49,11 @@ integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw
   
      <ul class="navbar-nav nav justify-content-end">
        <li class="nav-item">
-<<<<<<< HEAD
 
          <strong>
           <a class= "nav-link" href="/indexplots">90 Degree Radius </a> 
        </strong>
 
-=======
-          <a class= "nav-link" href="/indexplots">90 Degree Radius </a> 
->>>>>>> fe55d87ad4166a834a54ad094cf92b549ff75822
        </li>
        <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -70,11 +61,7 @@ integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class= "dropdown-item" href= "/minimapindex">Current Orbit </a>
-<<<<<<< HEAD
             <a class= "dropdown-item" href="/satglobe">Current Orbit Globe</a>
-=======
-            <a class= "dropdown-item" href="/satGlobe">Current Orbit Globe</a>
->>>>>>> fe55d87ad4166a834a54ad094cf92b549ff75822
             <a class= "dropdown-item" href="/cluster">Launch Sites</a>
         </div>
     </li>           
@@ -82,23 +69,7 @@ integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw
    </div>
  </nav>  
   <!-- Content -->
-  <hr>
-    <h2 ALIGN=Center >
-      <b>
-Position in Orbit </b>
-</h2>
-<br>
-<<<<<<< HEAD
-<h4>Description:</h4>
-    <p>This globe includes the dataset of 147 satellites that are currently in orbit under the Earth Resource category. Here you are able to see the plotted points on a 3-D image with a clearer view of the positions of the satellites.
-</p>
 
-=======
-<aside><h4>Description:</h4>
-    <p>This globe includes the dataset of 147 satellites that are currently in orbit under the Earth Resource category. Here you are able to see the plotted points on a 3-D image with a clearer view of the positions of the satellites.
-</p>
-</aside>
->>>>>>> fe55d87ad4166a834a54ad094cf92b549ff75822
     <div id="globe"></div>
 
 
