--- a/templates/index_plots.html
+++ b/templates/index_plots.html
@@ -25,13 +25,9 @@
      
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-<<<<<<< HEAD
-      
+      <strong class="greenblue"> 
      <a class="navbar navbar-brand a"  href="/">Satellite Positions</a>
-  
-=======
-     <a class="navbar navbar-brand a"  href="/">Satellite Positions</a>
->>>>>>> fe55d87ad4166a834a54ad094cf92b549ff75822
+   </strong>
      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
        <span class="navbar-toggler-icon"></span>
      </button>
@@ -65,11 +61,7 @@
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class= "dropdown-item" href= "/minimapindex">Current Orbit </a>
-<<<<<<< HEAD
               <a class= "dropdown-item" href="/satglobe">Current Orbit Globe</a>
-=======
-              <a class= "dropdown-item" href="/satGlobe">Current Orbit Globe</a>
->>>>>>> fe55d87ad4166a834a54ad094cf92b549ff75822
               <a class= "dropdown-item" href="/cluster">Launch Sites</a>
           </div>
       </li>           
@@ -78,7 +70,6 @@
    </nav>  
     <!-- Content -->
   <!-- Content -->
-<<<<<<< HEAD
   <div class="container">
     <div class="row">
       <div class="col-md-12 jumbotron text-center" style = "background-image: linear-gradient(lightcoral, orange,yellow)">
@@ -103,33 +94,6 @@
   <p>Think, the 90 degrees of sky overhead. This map has its own json file for data representation. The markers on this map have different radius sizes, which represents the altitude of that specific satellite, the larger the radius the higher the satellite is in orbit. </p>
   <hr>
 </aside>
-=======
-    <div class="container">
-        <div class="row">
-          <div class="col-md-12 jumbotron text-center" style = "background-image: linear-gradient(lightcoral, orange,yellow)">
-            <h1>Satellites within 90°</h1>
-          </div>
-    <hr>
-    </div>
-    <div class="chart-container"></div>
-      <div id="plot"></div>
-    <aside>
-      <h4>Description:</h4>
-      <p>This bar chart represents more than 2,800 satellites that are still in orbit today, they are grouped by the year the were launched. Created to get a better understanding for the sheer amount of satellites in the sky and the timeline of their orbit life-span. 
-        The number of satellites in this graph represent satellite within 90 degrees of the visible sky over head.</p>
-      </aside>
-    <hr>
-    </div>
-    <div class="chart-container"></div>
-      <div id="map"><div></div>
-    </div>
-    <aside>
-      <div class="col-lg-1" style="padding: 30px;"></div>
-      <h4>Description:</h4>
-      <p>Think, the 90 degrees of sky overhead. This map has its own json file for data representation. The markers on this map have different radius sizes, which represents the altitude of that specific satellite, the larger the radius the higher the satellite is in orbit. </p>
-      <hr>
-    </aside>
->>>>>>> fe55d87ad4166a834a54ad094cf92b549ff75822
    
 <!-- Leaflet JavaScript -->
 <script src="https://unpkg.com/leaflet@1.0.0-rc.3/dist/leaflet.js"></script>
@@ -139,11 +103,7 @@
  <script src="https://d3js.org/d3.v5.min.js"></script>
  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.7.1/d3-tip.min.js"></script>
  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<<<<<<< HEAD
   
-=======
- 
->>>>>>> fe55d87ad4166a834a54ad094cf92b549ff75822
  <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
  <!-- Leaflet JavaScript -->
  <script src="https://unpkg.com/leaflet@1.0.0-rc.3/dist/leaflet.js"></script>
@@ -167,9 +127,6 @@
     crossorigin="anonymous"></script>
 </body>
 </html>
-<<<<<<< HEAD
 
 
 
-=======
->>>>>>> fe55d87ad4166a834a54ad094cf92b549ff75822
