--- a/templates/minimap_index.html
+++ b/templates/minimap_index.html
@@ -24,15 +24,10 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-<<<<<<< HEAD
-     
+      <strong class="greenblue"> 
      <a class="navbar navbar-brand a"  href="/">Satellite Positions</a>
-   
+   </strong>
      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-=======
-      <a class= "navbar-brand" href="/">Satellites</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
->>>>>>> fe55d87ad4166a834a54ad094cf92b549ff75822
        <span class="navbar-toggler-icon"></span>
      </button>
    
@@ -55,14 +50,9 @@
     
        <ul class="navbar-nav nav justify-content-end">
          <li class="nav-item">
-<<<<<<< HEAD
            <strong>
             <a class= "nav-link" href="/indexplots">90 Degree Radius </a> 
          </strong>
-=======
-            <a class= "nav-link" href="/indexplots">90 Degree Radius </a> 
-        
->>>>>>> fe55d87ad4166a834a54ad094cf92b549ff75822
          </li>
          <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -70,11 +60,7 @@
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class= "dropdown-item" href= "/minimapindex">Current Orbit </a>
-<<<<<<< HEAD
               <a class= "dropdown-item" href="/satglobe">Current Orbit Globe</a>
-=======
-              <a class= "dropdown-item" href="/satGlobe">Current Orbit Globe</a>
->>>>>>> fe55d87ad4166a834a54ad094cf92b549ff75822
               <a class= "dropdown-item" href="/cluster">Launch Sites</a>
           </div>
       </li>           
@@ -82,25 +68,8 @@
      </div>
    </nav>  
     <!-- Content -->
-    <hr>
-    <h2 ALIGN=Center >
-      <b>
-Position in Orbit </b>
-</h2>
-<<<<<<< HEAD
-<br>
-<h4>Description:</h4>
-    <p>This is a 2-D image that includes the dataset of 147 satellites that are currently in orbit under the Earth Resource category. Here you are able to see the plotted points, represented by rockets, and click onto each individual rocket to obtain the name and launch date.
-</p>
-    
 
-=======
-<div class="col-lg-10" style="padding: 30px;"></div>
-<h4>Description:</h4>
-    <p>This is a 2-D image that includes the dataset of 147 satellites that are currently in orbit under the Earth Resource category. Here you are able to see the plotted points, represented by rockets, and click onto each individual rocket to obtain the name and launch date.
-<hr>
-</aside>
->>>>>>> fe55d87ad4166a834a54ad094cf92b549ff75822
+
   <div id="map"></div>
 
   <!-- Leaflet JS -->
