--- a/templates/minimap_index.html
+++ b/templates/minimap_index.html
@@ -24,9 +24,9 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <strong class="greenblue"> 
+      
      <a class="navbar navbar-brand a"  href="/">Satellite Positions</a>
-   </strong>
+   
      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
        <span class="navbar-toggler-icon"></span>
      </button>
@@ -68,7 +68,15 @@
      </div>
    </nav>  
     <!-- Content -->
-
+    <hr>
+    <h2 ALIGN=Center >
+      <b>
+Position in Orbit </b>
+</h2>
+<br>
+<h4>Description:</h4>
+    <p>This is a 2-D image that includes the dataset of 147 satellites that are currently in orbit under the Earth Resource category. Here you are able to see the plotted points, represented by rockets, and click onto each individual rocket to obtain the name and launch date.
+</p>
 
   <div id="map"></div>
 
