--- a/templates/cluster.html
+++ b/templates/cluster.html
@@ -27,9 +27,9 @@
   <body>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <strong class="greenblue"> 
+       
      <a class="navbar navbar-brand a"  href="/">Satellite Positions</a>
-   </strong>
+  
      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 
        <span class="navbar-toggler-icon"></span>
@@ -80,6 +80,7 @@
 </b>
 </h2>
 <br>
+<h4>Description:</h4>
     <p>
   Currently there are just under 150 Earth Resource satellites in orbit. Although many think that the satellites are launched in the country that is sourcing the satellite, it is not always the case.
   Here you will find a cluster map that you can click on. You will see what satellites were launched and the country it is sourced by.
