--- a/templates/satGlobe.html
+++ b/templates/satGlobe.html
@@ -23,9 +23,9 @@ integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <strong class="greenblue"> 
+   
    <a class="navbar navbar-brand a"  href="/">Satellite Positions</a>
- </strong>
+ 
    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
      <span class="navbar-toggler-icon"></span>
    </button>
@@ -69,6 +69,15 @@ integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw
    </div>
  </nav>  
   <!-- Content -->
+  <hr>
+    <h2 ALIGN=Center >
+      <b>
+Position in Orbit </b>
+</h2>
+<br>
+<h4>Description:</h4>
+    <p>This globe includes the dataset of 147 satellites that are currently in orbit under the Earth Resource category. Here you are able to see the plotted points on a 3-D image with a clearer view of the positions of the satellites.
+</p>
 
     <div id="globe"></div>
 
