--- a/templates/cluster.html
+++ b/templates/cluster.html
@@ -80,9 +80,9 @@
 </b>
 </h2>
 <br>
-<h4>Description:</h4>
+<!-- <h4>Description:</h4> -->
     <p>
-  Currently there are just under 150 Earth Resource satellites in orbit. Although many think that the satellites are launched in the country that is sourcing the satellite, it is not always the case.
+  Currently there are just under 150 Earth Resource satellites in orbit. Although many think that the satellites are launched in the country that is sourcing the satellite, that is not always the case.
   Here you will find a cluster map that you can click on. You will see what satellites were launched and the country it is sourced by.
   Many countries share space centers to assist in the launches into orbit. 
 </p>
