--- a/templates/minimap_index.html
+++ b/templates/minimap_index.html
@@ -71,10 +71,10 @@
     <hr>
     <h2 ALIGN=Center >
       <b>
-Position in Orbit </b>
+Satellites in Orbit </b>
 </h2>
 <br>
-<h4>Description:</h4>
+<!-- <h4>Description:</h4> -->
     <p>This is a 2-D image that includes the dataset of 147 satellites that are currently in orbit under the Earth Resource category. Here you are able to see the plotted points, represented by rockets, and click onto each individual rocket to obtain the name and launch date.
 </p>
 
