--- a/templates/satGlobe.html
+++ b/templates/satGlobe.html
@@ -72,13 +72,14 @@ integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw
   <hr>
     <h2 ALIGN=Center >
       <b>
-Position in Orbit </b>
+Satellites in Orbit </b>
 </h2>
 <br>
-<h4>Description:</h4>
+<!-- <h6>Description:</h6> -->
     <p>This globe includes the dataset of 147 satellites that are currently in orbit under the Earth Resource category. Here you are able to see the plotted points on a 3-D image with a clearer view of the positions of the satellites.
 </p>
 
+  
     <div id="globe"></div>
 
 
